--- a/styles/app.css
+++ b/styles/app.css
@@ -61,3 +61,52 @@ html {
   width: 150px;
   height: 50px;
 }
+
+.inputField {
+  border: 1px solid rgb(255, 164, 27);
+  width: 100%;
+}
+.input {
+  height: 45px;
+}
+.input:focus {
+  outline: none;
+}
+.inputfield,
+textarea {
+  margin-top: 10px;
+  resize: none;
+  outline: none;
+  font-size: 1.4rem;
+}
+
+.note {
+  width: 40%;
+  height: 360px;
+  border-radius: 5px;
+}
+
+.modal {
+  background-color: rgba(80, 80, 80, 0.486);
+  z-index: 99;
+  position: absolute;
+  display: none;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+}
+.addbtnModalContainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.createNoteModal {
+  width: 200px;
+  height: 50px;
+  font-size: 1.5rem;
+  border: none;
+  border-radius: 4px;
+  background-color: rgb(255, 164, 27);
+  color: white;
+  margin-top: 5px;
+}
