--- a/styles/app.css
+++ b/styles/app.css
@@ -52,20 +52,23 @@ html {
 }
 .add-btn {
   border: none;
-  background-color: white;
+  background-color: rgb(255, 255, 255);
   color: #444444;
   font-size: 1.5rem;
   border-radius: 10px;
   width: 150px;
   height: 50px;
+  cursor: pointer;
 }
 
 .inputField {
-  border: 1px solid rgb(255, 164, 27);
+  border: none;
+
   width: 100%;
 }
 .input {
   height: 45px;
+  border-bottom: 1px solid gray;
 }
 .input:focus {
   outline: none;
@@ -104,9 +107,9 @@ textarea {
   font-size: 1.5rem;
   border: none;
   border-radius: 4px;
-  background-color: rgb(255, 164, 27);
+  background-color: rgb(48, 179, 48);
   color: white;
-  margin-top: 5px;
+  margin-top: 30px;
 }
 
 #note-container {
@@ -135,17 +138,13 @@ textarea {
   display: flex;
 }
 
-.SinNote,
-#date {
-}
-
 #deleteBtnContainer {
   display: flex;
   justify-content: end;
 }
 
 #deleteBtn {
-  background-color: red;
+  background-color: rgb(253, 100, 100);
   color: white;
   border: none;
   outline: none;
@@ -156,4 +155,15 @@ textarea {
   font-size: 1.2rem;
   padding: 5px;
   cursor: pointer;
+}
+
+.checklistAddBtn {
+  background-color: rgb(255, 164, 27);
+  width: 200px;
+  height: 50px;
+  font-size: 1.5rem;
+  border: none;
+  border-radius: 4px;
+  color: white;
+  margin-top: 30px;
 }
