--- a/styles/app.css
+++ b/styles/app.css
@@ -7,10 +7,10 @@ html {
   font-family: Calibri;
 }
 .header-content {
-  width: 75%;
-  padding-left: 10px;
+  width: 100%;
   display: flex;
   align-items: center;
+  justify-content: center;
   font-size: 2.2rem;
 }
 #note-container-header {
@@ -36,20 +36,19 @@ html {
   color: #5a5a5a;
 }
 .btn-container {
-  width: 25%;
-  display: flex;
-  align-items: center;
-  justify-content: end;
-  padding-right: 10px;
+  position: fixed;
+  bottom: 0;
+  right: 0;
+  margin: 20px;
 }
 .add-btn {
   border: none;
-  background-color: rgb(255, 255, 255);
-  color: #444444;
-  font-size: 1.5rem;
-  border-radius: 10px;
-  width: 150px;
-  height: 50px;
+  background-color: rgb(255, 164, 27);
+  color: white;
+  font-size: 4rem;
+  border-radius: 100%;
+  width: 80px;
+  height: 80px;
   cursor: pointer;
 }
 
