--- a/styles/app.css
+++ b/styles/app.css
@@ -74,11 +74,11 @@ textarea {
 
 .note {
   width: 40%;
-  height: 340px;
+  height: 350px;
   border-radius: 5px;
   margin-left: 50px;
   margin-right: 50px;
-  margin-top: 20px;
+  margin-top: 200px;
   padding: 5px;
   background-color: #ffffff;
 }
@@ -94,18 +94,19 @@ textarea {
 }
 .addbtnModalContainer {
   display: flex;
-  justify-content: space-around;
+  justify-content: end;
   align-items: center;
 }
 .createNoteModal {
-  width: 150px;
+  width: 100px;
   height: 50px;
   font-size: 1.3rem;
   border: none;
   border-radius: 4px;
   background-color: rgb(48, 179, 48);
   color: white;
-  margin-top: 30px;
+  margin-top: 10px;
+  cursor: pointer;
 }
 
 #note-container {
@@ -154,30 +155,35 @@ textarea {
 }
 
 #modalCancelButton {
-  background-color: rgb(253, 100, 100);
-  width: 150px;
+  background-color: rgba(253, 100, 100, 0);
+  width: 100px;
   height: 50px;
   font-size: 1.3rem;
   border: none;
   border-radius: 4px;
-  color: white;
-  margin-top: 30px;
+  border: 1px solid rgb(253, 100, 100);
+  color: rgb(253, 100, 100);
+  margin-top: 10px;
+  margin-left: 15px;
+  cursor: pointer;
 }
 
-.checklistAddBtn {
-  background-color: rgb(255, 164, 27);
-  width: 150px;
-  height: 50px;
-  font-size: 1.3rem;
-  border: none;
+.modalAddChecklistButton {
+  background-color: rgb(0, 127, 201);
+  width: 100px;
+  height: 20px;
+  font-size: 1.1rem;
+  border: 1px solid rgb(1, 100, 158);
   border-radius: 4px;
-  color: white;
-  margin-top: 30px;
+  color: rgb(255, 255, 255);
+  cursor: pointer;
 }
 
-#checks {
+.checkListField {
+  width: 100%;
+  height: 100px;
   overflow: auto;
-  overflow-x: hidden;
-  height: 150px;
-  padding: 10px;
+}
+
+.checklistItem {
 }
