--- a/styles/app.css
+++ b/styles/app.css
@@ -261,5 +261,8 @@ h2 {
   padding: 5px;
   font-weight: 500;
 }
-.checklistItem {
+input[type="checkbox"] {
+  accent-color: rgb(0, 165, 0);
+  margin-top: 5px;
+  margin-left: 5px;
 }
